--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/starlight": "^0.29.0",
-    "astro": "^4.16.18",
     "cheerio": "^1.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sharp": "^0.32.5",
-    "starlight-katex": "^0.0.4",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/starlight": "^0.34.4",
+    "astro": "^5.10.1",
+    "astro-expressive-code": "^0.41.2",
+    "starlight-katex": "^0.0.4"
   }
 }
